crates/specforge-cli/tests/snapshots/tests__parity__remove_builtin__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "files_written": [
      "specforge.json"
    ],
    "orphan_warnings": [],
    "removed": "@specforge/product",
    "source": "builtin"
  }
}
